# arcgis-overture

./: .bumpversion.cfg  Makefile  README.md  environment.yml  make.cmd  pyproject.toml
arcgis/: README.md  arcgis-overture.aprx  arcgis_overture.pyt
config/: config.ini
docsrc/: mkdocs.yml
docsrc/mkdocs/: api.md  index.md
notebooks/: notebook-template.ipynb
scripts/: make_data.py  make_pyt_archive.py
src/arcgis_overture/: __init__.py  __main__.py
src/arcgis_overture/utils/: __init__.py  main.py
testing/: conftest.py  test_arcgis_overture.py
